--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: java
+dist: xenial
+services:
+  - xvfb
+script: xvfb-run --server-args="-screen 0 1024x768x24" make test
 script: mvn clean verify
